tests/snapshots/snapshot_ir_translations__gemini_ir__gemini_ir_roundtrip_request.snap
---
source: tests/snapshot_ir_translations.rs
expression: "&back"
---
{
  "model": "gemini-2.0-flash",
  "messages": [
    {
      "role": "user",
      "content": [
        {
          "type": "text",
          "text": "Summarize this"
        }
      ]
    }
  ],
  "max_tokens": 256,
  "sampling": {},
  "stream": {
    "enabled": false
  }
}
