tests/snapshots/snapshot_ir_translations__gemini_ir__gemini_minimal_request_to_ir.snap
---
source: tests/snapshot_ir_translations.rs
expression: "&ir"
---
{
  "model": "gemini-2.0-flash",
  "messages": [
    {
      "role": "user",
      "content": [
        {
          "type": "text",
          "text": "Hello"
        }
      ]
    }
  ],
  "sampling": {},
  "stream": {
    "enabled": false
  }
}
