tests/snapshots/snapshot_ir_translations__gemini_ir__gemini_stream_chunk_to_ir.snap
---
source: tests/snapshot_ir_translations.rs
expression: "&ir_chunks"
---
[
  {
    "index": 0,
    "delta_content": [
      {
        "type": "text",
        "text": "Partial "
      }
    ],
    "role": "assistant"
  }
]
